changed phone number search and fixed navbar z-index.

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -34,6 +34,7 @@ $colHighlight   : #bffcc1;
 $bgGradient     : linear-gradient(hsl(110, 50%, 50%), hsl(110,50%, 48%));
 
 .navbar-default {
+  z-index: 1001;
   background-color: $bgDefault;
   border-color: $bgHighlight;
   background-image: $bgGradient;
